cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

macro(create_test_with_options)
    set(NAME ${ARGV0})
    set(PREFIX ${ARGV1})
    set(CC_OPTIONS ${ARGV2})
    set(LD_OPTIONS ${ARGV3})
    set(LIBRARIES ${ARGV4})
    separate_arguments(CC_OPTIONS)
    separate_arguments(LD_OPTIONS)
    separate_arguments(LIBRARIES)

    add_executable(test_${PREFIX}_${ARGV0} src/test_${ARGV0}.cpp)
    target_compile_options(test_${PREFIX}_${ARGV0} PUBLIC ${CC_OPTIONS})
    target_link_options(test_${PREFIX}_${ARGV0} PUBLIC ${LD_OPTIONS})
    target_link_libraries(test_${PREFIX}_${ARGV0} PUBLIC ${LIBRARIES})
    add_test(NAME ${PREFIX}_${ARGV0} COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator ${CMAKE_BINARY_DIR}/tests/emulator/test_${PREFIX}_${ARGV0})
endmacro()

macro(create_simple_test)
    create_test_with_options(${ARGV0} debug_static_nopie "-g -O0 -DDEBUG -fpic" "-static -fno-pie" "")
    create_test_with_options(${ARGV0} debug_static_pie "-g -O0 -DDEBUG -fpic" "-static -fpie" "")
    create_test_with_options(${ARGV0} debug_dynamic_nopie "-g -O0 -DDEBUG -fpic" "-fno-pie" "")
    create_test_with_options(${ARGV0} debug_dynamic_pie "-g -O0 -DDEBUG -fpic" "-fpie" "")

    create_test_with_options(${ARGV0} release_static_nopie "-g -O2 -DNDEBUG -fpic" "-static -fno-pie" "")
    create_test_with_options(${ARGV0} release_static_pie "-g -O2 -DNDEBUG -fpic" "-static -fpie" "")
    create_test_with_options(${ARGV0} release_dynamic_nopie "-g -O2 -DNDEBUG -fpic" "-fno-pie" "")
    create_test_with_options(${ARGV0} release_dynamic_pie "-g -O2 -DNDEBUG -fpic" "-fpie" "")
endmacro()

macro(create_test_with_library)
    create_test_with_options(${ARGV0} debug_dynamic_nopie "-g -O0 -DDEBUG -fpic" "-no-pie" ${ARGV1})
    create_test_with_options(${ARGV0} debug_dynamic_pie "-g -O0 -DDEBUG -fpic" "-pie" ${ARGV1})

    create_test_with_options(${ARGV0} release_dynamic_nopie "-g -O2 -DNDEBUG -fpic" "-no-pie" ${ARGV1})
    create_test_with_options(${ARGV0} release_dynamic_pie "-g -O2 -DNDEBUG -fpic" "-pie" ${ARGV1})
endmacro()

create_simple_test(trivial)
create_simple_test(add)
create_simple_test(mul)
create_simple_test(call0)
create_simple_test(call1)
create_simple_test(print)
create_simple_test(arrays)
create_simple_test(strings)
create_simple_test(malloc)
create_simple_test(tostring)
create_simple_test(comparisons)
create_simple_test(staticinitialization)
create_simple_test(statics)
create_simple_test(staticcollection)
create_simple_test(staticconstructor)
create_simple_test(exceptions)
create_simple_test(boostmap)
create_simple_test(stringstream)
create_simple_test(interval)
create_simple_test(argc)
create_simple_test(nontrivialstatic)
create_simple_test(threadlocal)
create_simple_test(threadlocal_ctor_dtor)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/testfile.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
create_simple_test(openfile)
create_simple_test(readfile)
create_simple_test(virtual)
create_simple_test(fpu)
create_simple_test(fibonacci)
create_simple_test(big_malloc)
create_simple_test(x87)
create_simple_test(fenv)
create_simple_test(ostream)
create_simple_test(tmpfile)
create_simple_test(loop)
create_simple_test(loop_switch)
create_simple_test(loop_call)
create_simple_test(memmove)
create_simple_test(open_file_twice)
create_simple_test(munmap)
create_simple_test(devttywrite)
create_simple_test(streams)
create_simple_test(devnull)
create_simple_test(pipe)
create_simple_test(mmap2)
create_simple_test(munmap2)
create_simple_test(memfd_munmap)
create_simple_test(big_memcpy)
create_simple_test(ioctl)
create_simple_test(jit)
create_simple_test(repnzscas)
create_simple_test(random_call)
create_simple_test(fact)
create_simple_test(ack)
create_simple_test(lseek)
create_simple_test(longjmp)

add_executable(test_abort src/test_abort.cpp)
target_compile_options(test_abort PUBLIC ${CC_OPTIONS})
target_link_libraries(test_abort PUBLIC pthread)
add_test(NAME abort COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_abort)
set_tests_properties(abort PROPERTIES WILL_FAIL TRUE)

add_executable(test_trivial_c src/test_trivial.c)
target_compile_options(test_trivial_c PUBLIC ${CC_OPTIONS})
target_link_options(test_trivial_c PUBLIC ${LD_OPTIONS} -static)
add_test(NAME trivial_c COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_trivial_c)

add_executable(test_mpfr_c src/test_mpfr.c)
target_compile_options(test_mpfr_c PUBLIC ${CC_OPTIONS})
target_link_libraries(test_mpfr_c PUBLIC mpfr gmp)
target_link_options(test_mpfr_c PUBLIC ${LD_OPTIONS} -static)
add_test(NAME mpfr_c COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_mpfr_c)

create_test_with_library(unordered_map fmt::fmt-header-only)
create_test_with_library(programargs fmt::fmt-header-only)
create_test_with_library(fmt_print fmt::fmt-header-only)
create_test_with_library(thread pthread)
create_test_with_library(threadlocal2 pthread)
create_test_with_library(thread_wait pthread)
create_test_with_library(atomic pthread)
create_test_with_library(lock pthread)
create_test_with_library(time pthread)

add_executable(test_thread_scaling src/test_thread_scaling.cpp)
target_compile_options(test_thread_scaling PUBLIC ${CC_OPTIONS})
target_link_libraries(test_thread_scaling PUBLIC pthread)
if(MULTIPROCESSING)
    target_compile_definitions(test_thread_scaling PUBLIC MULTIPROCESSING=1)
endif(MULTIPROCESSING)
add_test(NAME thread_scaling COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_thread_scaling)

add_executable(test_deadlock src/test_deadlock.cpp)
target_compile_options(test_deadlock PUBLIC ${CC_OPTIONS})
target_link_libraries(test_deadlock PUBLIC pthread)
add_test(NAME deadlock COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_deadlock)
set_tests_properties(deadlock PROPERTIES WILL_FAIL TRUE)


add_executable(test_unix_socket src/test_unix_socket.cpp)
target_compile_options(test_unix_socket PUBLIC ${CC_OPTIONS})
target_link_libraries(test_unix_socket PUBLIC pthread)
add_test(NAME unix_socket COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_unix_socket)

add_test(NAME unix_socket_fail COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_unix_socket fail)
set_tests_properties(unix_socket_fail PROPERTIES WILL_FAIL TRUE)

find_library(LUA_NUMA numa)
if(LUA_NUMA)
    add_executable(test_numa src/test_numa.cpp)
    target_compile_options(test_numa PUBLIC ${CC_OPTIONS})
    target_link_libraries(test_numa PUBLIC numa)
    target_link_options(test_numa PUBLIC ${LD_OPTIONS})
    add_test(NAME numa COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_numa)
endif()

if(EXISTS "/usr/bin/whoami")
    add_test(NAME whoami COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/whoami)
endif()

if(EXISTS "/usr/bin/id")
    add_test(NAME id COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/id)
endif()

if(EXISTS "/usr/bin/python2.7")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/empty.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME empty_python27_script COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python2.7 empty.py)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/trivial.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME trivial_python27_script COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python2.7 trivial.py)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/json.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME python27_json COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python2.7 json.py)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/networkx.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME python27_networkx COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python2.7 networkx.py)
endif()

if(EXISTS "/usr/bin/python3")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/empty.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME empty_python3_script COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python3 empty.py)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/trivial.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME trivial_python3_script COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python3 trivial.py)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/json.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME python3_json COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python3 json.py)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/networkx.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME python3_networkx COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator /usr/bin/python3 networkx.py)
endif()


find_library(LIB_AVCODEC avcodec)
find_library(LIB_AVFORMAT avformat)
find_library(LIB_AVUTIL avutil)
if(LIB_AVCODEC AND LIB_AVFORMAT AND LIB_AVUTIL)
    add_executable(test_avcodec src/test_avcodec.cpp)
    target_compile_options(test_avcodec PUBLIC ${CC_OPTIONS})
    target_link_libraries(test_avcodec PUBLIC avcodec avformat avutil)
    target_link_options(test_avcodec PUBLIC ${LD_OPTIONS})
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/data/koala.mp4 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
    add_test(NAME avcodec COMMAND ${CMAKE_BINARY_DIR}/emulator/emulator test_avcodec koala.mp4)
endif()