cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
set(LD_OPTIONS)

add_executable(test_procfs src/test_procfs.cpp)
target_compile_options(test_procfs PUBLIC ${CC_OPTIONS})
target_include_directories(test_procfs PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_procfs PUBLIC x64cpu x64emulator)
target_link_options(test_procfs PUBLIC ${LD_OPTIONS})
add_test(NAME procfs COMMAND test_procfs)

add_executable(test_setfl src/test_setfl.cpp)
target_compile_options(test_setfl PUBLIC ${CC_OPTIONS})
target_include_directories(test_setfl PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_setfl PUBLIC x64cpu x64emulator)
target_link_options(test_setfl PUBLIC ${LD_OPTIONS})
add_test(NAME setfl COMMAND test_setfl)