cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
set(LD_OPTIONS)

macro(create_simple_static_test)
    add_executable(test_static_${ARGV0} src/test_${ARGV0}.cpp)
    target_compile_options(test_static_${ARGV0} PUBLIC ${CC_OPTIONS})
    target_link_options(test_static_${ARGV0} PUBLIC ${LD_OPTIONS} -static)
    add_test(NAME static_${ARGV0} COMMAND ${CMAKE_BINARY_DIR}/interpreter test_static_${ARGV0})
endmacro()

macro(create_simple_dynamic_test)
    add_executable(test_dynamic_${ARGV0} src/test_${ARGV0}.cpp)
    target_compile_options(test_dynamic_${ARGV0} PUBLIC ${CC_OPTIONS})
    target_link_options(test_dynamic_${ARGV0} PUBLIC ${LD_OPTIONS})
    add_test(NAME dynamic_${ARGV0} COMMAND ${CMAKE_BINARY_DIR}/interpreter ${CMAKE_BINARY_DIR}/tests/interpreter/test_dynamic_${ARGV0})
endmacro()

macro(create_simple_test)
    create_simple_static_test(${ARGV0})
    create_simple_dynamic_test(${ARGV0})
endmacro()

create_simple_test(trivial)
create_simple_test(add)
create_simple_test(mul)
create_simple_test(call0)
create_simple_test(call1)
create_simple_test(print)
create_simple_test(arrays)
create_simple_test(strings)
create_simple_test(malloc)
create_simple_test(tostring)
create_simple_test(comparisons)
create_simple_test(staticinitialization)
create_simple_test(statics)
create_simple_test(staticcollection)
create_simple_test(staticconstructor)
create_simple_test(exceptions)
create_simple_test(boostmap)
create_simple_test(stringstream)
create_simple_test(interval)
create_simple_test(argc)
create_simple_test(nontrivialstatic)
create_simple_test(threadlocal)
create_simple_test(threadlocal_ctor_dtor)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/testfile.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
create_simple_test(openfile)
create_simple_test(readfile)
create_simple_test(virtual)
create_simple_test(fpu)
create_simple_test(fibonacci)
create_simple_test(big_malloc)
create_simple_test(x87)
create_simple_test(fenv)
create_simple_test(ostream)
create_simple_test(tmpfile)
create_simple_test(loop)


add_executable(test_trivial_c src/test_trivial.c)
target_compile_options(test_trivial_c PUBLIC ${CC_OPTIONS})
target_link_options(test_trivial_c PUBLIC ${LD_OPTIONS} -static)
add_test(NAME trivial_c COMMAND ${CMAKE_BINARY_DIR}/interpreter test_trivial_c)

add_executable(test_unordered_map src/test_unordered_map.cpp)
target_compile_options(test_unordered_map PUBLIC ${CC_OPTIONS})
target_link_libraries(test_unordered_map PUBLIC fmt::fmt-header-only)
target_link_options(test_unordered_map PUBLIC ${LD_OPTIONS} -static)
add_test(NAME unordered_map COMMAND ${CMAKE_BINARY_DIR}/interpreter test_unordered_map)

add_executable(test_programargs src/test_programargs.cpp)
target_compile_options(test_programargs PUBLIC ${CC_OPTIONS})
target_link_libraries(test_programargs PUBLIC fmt::fmt-header-only)
target_link_options(test_programargs PUBLIC ${LD_OPTIONS} -static)
add_test(NAME programargs COMMAND ${CMAKE_BINARY_DIR}/interpreter test_programargs)

add_executable(test_fmt_print src/test_fmt_print.cpp)
target_compile_options(test_fmt_print PUBLIC ${CC_OPTIONS})
target_link_libraries(test_fmt_print PUBLIC fmt::fmt-header-only)
target_link_options(test_fmt_print PUBLIC ${LD_OPTIONS} -static)
add_test(NAME fmt_print COMMAND ${CMAKE_BINARY_DIR}/interpreter test_fmt_print)

add_executable(test_thread src/test_thread.cpp)
target_compile_options(test_thread PUBLIC ${CC_OPTIONS})
target_link_libraries(test_thread PUBLIC pthread)
add_test(NAME thread COMMAND ${CMAKE_BINARY_DIR}/interpreter test_thread)

add_executable(test_threadlocal2 src/test_threadlocal2.cpp)
target_compile_options(test_threadlocal2 PUBLIC ${CC_OPTIONS})
target_link_libraries(test_threadlocal2 PUBLIC pthread)
add_test(NAME threadlocal2 COMMAND ${CMAKE_BINARY_DIR}/interpreter test_threadlocal2)

add_executable(test_thread_scaling src/test_thread_scaling.cpp)
target_compile_options(test_thread_scaling PUBLIC ${CC_OPTIONS})
target_link_libraries(test_thread_scaling PUBLIC pthread)
add_test(NAME thread_scaling COMMAND ${CMAKE_BINARY_DIR}/interpreter test_thread_scaling)

add_executable(test_atomic src/test_atomic.cpp)
target_compile_options(test_atomic PUBLIC ${CC_OPTIONS})
target_link_libraries(test_atomic PUBLIC pthread)
add_test(NAME test_atomic COMMAND ${CMAKE_BINARY_DIR}/interpreter test_atomic)