cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
set(LD_OPTIONS)

add_executable(test_strlen_sse2 src/test_strlen_sse2.cpp)
target_compile_options(test_strlen_sse2 PRIVATE ${CC_OPTIONS})
target_link_options(test_strlen_sse2 PRIVATE ${LD_OPTIONS})
target_include_directories(test_strlen_sse2 PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_strlen_sse2 PRIVATE x64cpu fmt::fmt-header-only)
if(MULTIPROCESSING)
    target_compile_definitions(test_strlen_sse2 PRIVATE MULTIPROCESSING=1)
    target_link_libraries(test_strlen_sse2 PRIVATE pthread)
endif(MULTIPROCESSING)
add_test(NAME strlen_sse2 COMMAND test_strlen_sse2)

add_executable(test_ioctl_probe src/test_ioctl_probe.cpp)
target_compile_options(test_ioctl_probe PRIVATE ${CC_OPTIONS})
target_link_options(test_ioctl_probe PRIVATE ${LD_OPTIONS})
target_include_directories(test_ioctl_probe PRIVATE include ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(test_ioctl_probe PRIVATE x64emulator fmt::fmt-header-only)
add_test(NAME ioctl_probe COMMAND test_ioctl_probe)

add_executable(test_capstone_lea src/test_capstone_lea.cpp)
target_compile_options(test_capstone_lea PRIVATE ${CC_OPTIONS})
target_link_options(test_capstone_lea PRIVATE ${LD_OPTIONS})
target_include_directories(test_capstone_lea PRIVATE include ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(test_capstone_lea PRIVATE x64emulator fmt::fmt-header-only)
add_test(NAME capstone_lea COMMAND test_capstone_lea)

add_executable(test_mmu src/test_mmu.cpp)
target_compile_options(test_mmu PRIVATE ${CC_OPTIONS})
target_link_options(test_mmu PRIVATE ${LD_OPTIONS})
target_include_directories(test_mmu PRIVATE include ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(test_mmu PRIVATE x64cpu fmt::fmt-header-only)
add_test(NAME mmu COMMAND test_mmu)